// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Selectors returns enriched and sorted list 1`] = `
Array [
  Object {
    "access": "access",
    "isCurrentUser": false,
    "name": "Ape",
    "roleLabel": "access",
    "subaccount_name": null,
    "username": "ape",
  },
  Object {
    "access": "templates",
    "isCurrentUser": true,
    "name": "Zebra",
    "roleLabel": "Templates",
    "subaccount_name": null,
    "username": "zebra",
  },
]
`;

exports[`Users Selectors returns if user not found 1`] = `undefined`;

exports[`Users Selectors returns user from user list 1`] = `
Object {
  "access": "access",
  "isCurrentUser": false,
  "name": "Ape",
  "username": "ape",
}
`;
